Related: tdf#92695 gtk3 only activate/deactive submenus, not the toplevel

Change-Id: I5ce7ae39e7db62551733a005f3163ebfbb027af6